# trustlayer

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/: AWESOME_LIST_SUBMISSIONS.md  GITHUB_TOPICS.md
advertise/: hn-show-hn.md  poster.py  product-hunt.md  reddit-local-llama.md  twitter-thread.md
backend/: config.py  database.py  main.py
backend/providers/: base.py  ollama.py  openai_compat.py  registry.py
backend/routers/: audit.py  compare.py  connectors.py  consistency.py  costs.py  digest.py  history.py  knowledge.py  learn.py  proxy.py  router.py  settings.py  verify.py  workflows.py
backend/routing/: engine.py  rules.py
cli/trustlayer_cli/: main.py
docs/: index.html  index.html.bak
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Sidebar.tsx  TrustBadge.tsx
frontend/src/pages/: AuditLog.tsx  Compare.tsx  Connectors.tsx  Consistency.tsx  Costs.tsx  Dashboard.tsx  History.tsx  Knowledge.tsx  Profile.tsx  Settings.tsx  SmartRouter.tsx  Verify.tsx  Workflows.tsx
tests/: test_connectors.py  test_providers.py  test_verify.py
